@@ -76,3 +76,4 @@ Version 1.18 (unreleased)
 * If dynamic tag filtering is enabled on the recent articles block, but no results are available 
 for the current tag, the block will hide itself (block is not returned).
 * Allow filtering of untagged content
+* Recent articles block will no longer display title if there is no contents.
